--- a/neo4j_db_resolver/package.json
+++ b/neo4j_db_resolver/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "hritwik",
   "license": "ISC",
   "dependencies": {
-    "neo4j-driver": "^4.4.5"
+    "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "mongoose": "^6.3.5",
+    "neo4j-driver": "^4.4.5",
+    "nodemon": "^2.0.16"
   }
 }
