--- a/neo4j_db_resolver/package.json
+++ b/neo4j_db_resolver/package.json
@@ -10,6 +10,7 @@
   "author": "hritwik",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.8.2",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
